@@ -3,6 +3,7 @@
 //
 // Modified by Anders Logg, 2005.
 
+#include <dolfin/dolfin_log.h>
 #include <dolfin/FiniteElement.h>
 
 using namespace dolfin;
@@ -16,5 +17,16 @@ FiniteElement::FiniteElement()
 FiniteElement::~FiniteElement()
 {
   // Do nothing
+}
+//-----------------------------------------------------------------------------
+void FiniteElement::disp() const
+{
+  dolfin_info("Finite element data:");
+  dolfin_info("--------------------");
+  dolfin_info("");
+  dolfin_info("  space dimension = %d", spacedim());
+  dolfin_info("  shape dimension = %d", shapedim());
+  dolfin_info("      tensor rank = %d", rank());
+  dolfin_info("");
 }
 //-----------------------------------------------------------------------------
