@@ -239,13 +239,13 @@ dolfin::LogStream& dolfin::operator<<(LogStream& stream, const Cell& cell)
 {
   switch ( cell.type() ){
   case Cell::triangle:
-    stream << "[Cell (triangle): id = " << cell.id() << " nodes = ( ";
+    stream << "[ Cell (triangle): id = " << cell.id() << " nodes = ( ";
     for (NodeIterator n(cell); !n.end(); ++n)
       stream << n->id() << " ";
     stream << ") ]";
     break;
   case Cell::tetrahedron:
-    stream << "[Cell (tetrahedron): id = " << cell.id() << " nodes = ( ";
+    stream << "[ Cell (tetrahedron): id = " << cell.id() << " nodes = ( ";
     for (NodeIterator n(cell); !n.end(); ++n)
       stream << n->id() << " ";
     stream << ") ]";
